--- a/blogposts/templates/blogposts/new_post.html
+++ b/blogposts/templates/blogposts/new_post.html
@@ -18,8 +18,12 @@
             <label class="text-lbl">Text:</label>
             <textarea name="text" cols="30" rows="8" class="field-text" required></textarea>
         </div>
-        <button type="submit" class="btn create-btn">Create Post</button>
+        <div class="btn-container flex">
+            <button type="submit" class="btn create-btn">Create Post</button>
+        </div>
     </form>
-    <a href="{% url 'index' %}" class="btn home-btn">Home</a>
+    <div class="btn-container flex">
+        <a href="{% url 'index' %}" class="btn home-btn">Home</a>
+    </div>
 </div>
 {% endblock %}
