--- a/blogposts/templates/registration/logout.html
+++ b/blogposts/templates/registration/logout.html
@@ -5,6 +5,6 @@
 {% block content %} 
     <div class="action-container page-container flex">
         <h1 class="action-msg">See you soon!</h1>
-        <a href="{% url 'index' %}" class="btn home-btn">Home</a>
+        <a href="{% url 'index' %}" class="btn out-home-btn">Home</a>
     </div>
 {% endblock %}
