--- a/blogposts/static/css/main.css
+++ b/blogposts/static/css/main.css
@@ -104,8 +104,10 @@ a:hover {
     margin: 2rem auto;
 }
 
-.new-btn {
-    margin-bottom: 1rem;
+.main-text {
+    margin: 1rem;
+    font-size: 20px;
+    text-align: center;
 }
 
 .card-container {
@@ -120,8 +122,8 @@ a:hover {
     border: 5px solid #2C4251;
     border-radius: 15px;
     padding: 1rem;
-    width: 225px;
-    height: 150px;
+    width: 250px;
+    height: 175px;
     flex-direction: column;
     justify-content: center;
 }
@@ -131,7 +133,7 @@ a:hover {
 }
 
 .card-link {
-    font-size: 18px;
+    font-size: 25px;
     font-weight: 700;
     color: rgba(44, 66, 81, 0.85);
 }
@@ -140,10 +142,15 @@ a:hover {
     color: #2C4251;
 }
 
+.card-author,
+.card-date {
+    font-size: 20px;
+}
+
 .card-author {
     font-style: italic;
 }
 
 .card-date {
-    color: rgba(0, 0, 0, 0.75);
+    color: rgba(0, 0, 0, 0.60);
 }
