--- a/blogposts/templates/blogposts/delete_post.html
+++ b/blogposts/templates/blogposts/delete_post.html
@@ -3,8 +3,8 @@
 {% block title %} Post Deleted - Blogish {% endblock %}
 
 {% block content %}
-    <div class="del-container page-container flex">
-        <h1 class="delete-msg">Your post has been deleted.</h1>
-        <a href="{% url 'index' %}" class="btn home-btn">Home</a>
+    <div class="action-container page-container flex">
+        <h1 class="action-msg">Your post has been deleted.</h1>
+        <a href="{% url 'index' %}" class="btn del-home-btn">Home</a>
     </div>
 {% endblock %}
