--- a/blogposts/static/css/accounts.css
+++ b/blogposts/static/css/accounts.css
@@ -49,7 +49,8 @@
 /* REGISTRATION */
 .register-container {
     width: 60%;
-    height: 75vh;
+    height: auto;
+    padding: 1rem;
 }
 
 .register-form {
