adjusted base.html structure and main page card component sizing

--- a/blogposts/templates/base.html
+++ b/blogposts/templates/base.html
@@ -32,15 +32,12 @@
             </button>
             <div class="collapse navbar-collapse" id="navbarText">
                 <ul class="navbar-nav me-auto mx-auto mb-1 mb-lg-0">
-                <li class="nav-item">
-                    <a class="nav-link" aria-current="page" href="{% url 'index' %}">Home</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="{% url 'about_contact' %}">About</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="{% url 'about_contact' %}">Contact</a>
-                </li>
+                    <li class="nav-item">
+                        <a class="nav-link" aria-current="page" href="{% url 'index' %}">Home</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="{% url 'about_contact' %}">About & Contact</a>
+                    </li>
                 </ul>
                 <ul class="navbar-nav me-2 mb-1 mb-lg-0">
                     <li class="nav-item">
@@ -61,15 +58,12 @@
             </button>
             <div class="collapse navbar-collapse" id="navbarText">
                 <ul class="navbar-nav me-auto mx-auto mb-1 mb-lg-0">
-                <li class="nav-item">
-                    <a class="nav-link" aria-current="page" href="{% url 'index' %}">Home</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="{% url 'about_contact' %}">About</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="{% url 'about_contact' %}">Contact</a>
-                </li>
+                    <li class="nav-item">
+                        <a class="nav-link" aria-current="page" href="{% url 'index' %}">Home</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="{% url 'about_contact' %}">About & Contact</a>
+                    </li>
                 </ul>
                 <ul class="navbar-nav me-2 mb-1 mb-lg-0">
                     <li class="nav-item">
