--- a/blogposts/templates/blogposts/about_contact.html
+++ b/blogposts/templates/blogposts/about_contact.html
@@ -3,7 +3,7 @@
 {% block title %} About & Contact - Blogish {% endblock %}
 
 {% block content %}
-    <div class="aux-container flex">
+    <div class="aux-container flex" id="about">
         <h2 class="aux-title">About Blogish</h2>
         <p class="aux-text">Thank you for viewing Blogish, a simple blogging app, created with Django! Users of the app can create an account* in order to create, edit, and delete posts. Users who do not wish to do any of these actions can simply view the currently available posts.</p>
         <p class="fine-text">*The registration form requires an email to be entered, however, there is no email confirmation. A random string of letters (ex: aaa@bbb.cc) will suffice.</p>
@@ -12,7 +12,7 @@
         </p>
     </div>
 
-    <div class="aux-container flex">
+    <div class="aux-container flex" id="contact">
         <h2 class="aux-title">Contact</h2>
         <p class="aux-text">You can contact the admin of Blogish via:</p>
             <div class="contact-items flex">
